[package]
name = "mobugsnag"
version = "0.1.0"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Bugsnag testing crate for learning purposes"
homepage = "https://github.com/zpeters/mobugsnag"
documentation = "https://docs.rs/mobugsnag"
readme = "README.md"
repository = "https://github.com/zpeters/mobugsnag"
keywords = ["learning", "bugsnag"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { "version" = "2.0.1", "features" = ["json"] }
